--- a/JenkinsFile
+++ b/JenkinsFile
@@ -64,12 +64,18 @@ pipeline {
         }
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
+                def oldPath = 'image: rockuk/ultimate-cicd:[\w.-]+'
+                def newPath = 'image: rockuk/ultimate-cicd:${BUILD_NUMBER}'
+
                 sh '''
                     git config user.email "stevenwu@163.com"
                     git config user.name "StevenWoW-K5"
                     BUILD_NUMBER=${BUILD_NUMBER}
                     //sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    sed -i "s/image: rockuk\/ultimate-cicd:[\w.-]+/image: rockuk\/ultimate-cicd:${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    //sed -i "s/image: rockuk\/ultimate-cicd:[\w.-]+/image: rockuk\/ultimate-cicd:${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    
+                    //sed -i "s/image: rockuk\/ultimate-cicd:[\w.-]+/image: rockuk\/ultimate-cicd:${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    sed -i 's@${oldPath}@${newPath}@g' java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
 
                     git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
