--- a/JenkinsFile
+++ b/JenkinsFile
@@ -64,8 +64,11 @@ pipeline {
         }
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                def oldPath = 'image: rockuk/ultimate-cicd:[\w.-]+'
-                def newPath = 'image: rockuk/ultimate-cicd:${BUILD_NUMBER}'
+                //def oldPath = 'image: rockuk/ultimate-cicd:[\w.-]+'
+                //def newPath = 'image: rockuk/ultimate-cicd:${BUILD_NUMBER}'
+
+                def oldPath = 'image: rockuk/ultimate-cicd:[\\w.-]+'
+                def newPath = "image: rockuk/ultimate-cicd:${BUILD_NUMBER}"
 
                 sh '''
                     git config user.email "stevenwu@163.com"
@@ -76,6 +79,7 @@ pipeline {
                     
                     //sed -i "s/image: rockuk\/ultimate-cicd:[\w.-]+/image: rockuk\/ultimate-cicd:${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     sed -i 's@${oldPath}@${newPath}@g' java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    
 
                     git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
