--- a/JenkinsFile
+++ b/JenkinsFile
@@ -66,7 +66,7 @@ pipeline {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 //def oldPath = 'image: rockuk/ultimate-cicd:[\w.-]+'
                 //def newPath = 'image: rockuk/ultimate-cicd:${BUILD_NUMBER}'
-
+script {
                 def oldPath = "image: rockuk/ultimate-cicd:[\\w.-]+"
                 def newPath = "image: rockuk/ultimate-cicd:${BUILD_NUMBER}"
 
@@ -82,6 +82,7 @@ pipeline {
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                 '''
+}
             }
         }
     }
