--- a/JenkinsFile
+++ b/JenkinsFile
@@ -31,7 +31,7 @@ pipeline {
             script {
                 def sonarqubeApiUrl = "http://203.33.207.10:9000/api/qualitygates/project_status?projectKey=com.abhishek:spring-boot-demo"
                 def sonarqubeResponse = sh(script: "curl -u admin:${sonarpwd} -s '$sonarqubeApiUrl'", returnStdout: true)
-                def sonarqubeStatus = readJSON(text: sonarqubeResponse).projectStatus.status
+                def sonarqubeStatus = readJson(text: sonarqubeResponse).projectStatus.status
 
                 if (sonarqubeStatus == 'OK') {
                     echo "SonarQube analysis passed!"
