--- a/JenkinsFile
+++ b/JenkinsFile
@@ -29,9 +29,9 @@ pipeline {
           sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
         // Retrieve SonarQube analysis status
             script {
-                def sonarqubeApiUrl = "http://203.33.207.10:9000/api/qualitygates/project_status?projectKey=com.abhishek:spring-boot-demo"
-                def sonarqubeResponse = sh(script: "curl -u admin:${sonarpwd} -s '$sonarqubeApiUrl'", returnStdout: true)
-                def sonarqubeStatus = readJson(text: sonarqubeResponse).projectStatus.status
+                def sonarqubeApiUrl = "http://203.33.207.10:9000/api/qualitygates/project_status?projectKey=com.k5:spring-boot-demo"
+                def sonarqubeResponse = sh(script: "curl -s $sonarqubeApiUrl", returnStdout: true)
+                def sonarqubeStatus = readJSON(text: sonarqubeResponse).projectStatus.status
 
                 if (sonarqubeStatus == 'OK') {
                     echo "SonarQube analysis passed!"
