--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,7 +19,8 @@ pipeline {
 
 
                     def sonarqubeApiUrl = "http://203.33.207.10:9000/api/qualitygates/project_status?projectKey=com.k5:spring-boot-demo"
-                    def sonarqubeResponse = sh(script: 'curl -u admin:${sonarpwd} -s ${sonarqubeApiUrl}', returnStdout: true)
+
+                    def sonarqubeResponse = sh(script: "curl -u admin:${sonarpwd} -s '$sonarqubeApiUrl'", returnStdout: true)
                     echo sonarqubeResponse
                     def sonarqubeStatus = readJSON(text: sonarqubeResponse).projectStatus.status
                     echo sonarqubeStatus
@@ -56,7 +57,7 @@ pipeline {
         // Retrieve SonarQube analysis status
             script {
                 def sonarqubeApiUrl = "http://203.33.207.10:9000/api/qualitygates/project_status?projectKey=com.k5:spring-boot-demo"
-                def sonarqubeResponse = sh(script: 'curl -u admin:${sonarpwd} -s ${sonarqubeApiUrl}', returnStdout: true)
+                def sonarqubeResponse = sh(script: "curl -u admin:${sonarpwd} -s '$sonarqubeApiUrl'", returnStdout: true)
                 def sonarqubeStatus = readJSON(text: sonarqubeResponse).projectStatus.status
 
                 if (sonarqubeStatus == 'OK') {
