--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,8 +9,9 @@ pipeline {
   stage('test'){
   steps{
         script {
-                  def oldPath = "image: rockuk/ultimate-cicd:[\\w.-]+"
+                  def oldPath = "image: rockuk/ultimate-cicd:[\w.-]+"
                   def newPath = "image: rockuk/ultimate-cicd:${BUILD_NUMBER}"
+
 
                   sh '''
                       git config user.email "stevenwu@163.com"
@@ -18,7 +19,7 @@ pipeline {
                       BUILD_NUMBER=18
 
 
-                      sed -i 's@${oldPath}@${newPath}@g' java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                      sed -i 's@${oldPath}@${newPath}@g' "java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
 
                       git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                       git commit -m "Update deployment image to version ${BUILD_NUMBER}"
