--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,6 +6,19 @@ pipeline {
     }
   }
   stages {
+  stage('Checkout') {
+        steps {
+          sh 'echo passed'
+          git branch: 'main', url: 'https://github.com/StevenWoW-K5/Jenkins-Zero-To-Hero-forked.git'
+        }
+      }
+      stage('Build and Test') {
+        steps {
+          sh 'ls -ltr'
+          // build the project and create a JAR file
+          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app'
+        }
+      }
   stage('test'){
   steps{
         script {
