--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,7 +32,7 @@ pipeline {
                       BUILD_NUMBER=18
 
 
-                      sed -i 's@${oldPath}@${newPath}@g' "java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
+                      sed -i 's@"image: rockuk/ultimate-cicd:[\\w.-]+"@"image: rockuk/ultimate-cicd:${BUILD_NUMBER}"@g' "java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
 cat "java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
                       git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                       git commit -m "Update deployment image to version ${BUILD_NUMBER}"
