--- a/JenkinsFile
+++ b/JenkinsFile
@@ -30,21 +30,21 @@ pipeline {
         script {
                   def oldPath = "image: rockuk/ultimate-cicd:[\\w.-]+"
                   def newPath = "image: rockuk/ultimate-cicd:${BUILD_NUMBER}"
-
+                  checkout scmGit(branches: [[name: '*/master']], extensions: [], userRemoteConfigs: [[credentialsId: 'sshGithub', url: 'git@github.com:StevenWoW-K5/Jenkins-Zero-To-Hero-forked-Deployment.git']])
 
                   sh '''
                       git config user.email "stevenwu@163.com"
                       git config user.name "StevenWoW-K5"
                       BUILD_NUMBER=18
 
-
-
-                      sed -i -E 's/image: rockuk\\/ultimate-cicd:([0-9.]+)/image: rockuk\\/ultimate-cicd:78/g' "java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
+                      ls -ltr
+                      cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+                      sed -i -E 's/image: rockuk\\/ultimate-cicd:([0-9.]+)/image: rockuk\\/ultimate-cicd:38/g' "java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
 
                       cat "java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml"
                       git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
                       git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                      git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                      git push
                   '''
                   }
 }
