--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,10 +7,10 @@ pipeline {
   }
 
       options {
-          skipDefaultCheckout() // Skip the default checkout step in Declarative Pipelines
+          //skipDefaultCheckout() // Skip the default checkout step in Declarative Pipelines
       }
   stages {
-          stage('Hello') {
+          stage('Hello11') {
               steps {
                   checkout changelog: false, poll: false, scm: scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: '8c0b4de7-ab96-4d0e-9eec-a561ee4a5b6e', url: 'git@github.com:StevenWoW-K5/Jenkins-Zero-To-Hero-forked-Deployment.git']])
               }
