--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,8 +12,9 @@ pipeline {
   stages {
           stage('Hello11') {
               steps {
+              sh 'pwd'
                   checkout changelog: false, poll: false, scm: scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: '8c0b4de7-ab96-4d0e-9eec-a561ee4a5b6e', url: 'git@github.com:StevenWoW-K5/Jenkins-Zero-To-Hero-forked-Deployment.git']])
-                  sh 'ls -ltr'
+                  sh 'ls -ltr -a'
               }
           }
 
@@ -23,13 +24,16 @@ pipeline {
                 steps {
                   sh 'echo passed'
                   //git branch: 'main', url: 'git@github.com:StevenWoW-K5/Jenkins-Zero-To-Hero-forked.git'
+                  sh 'pwd'
                   checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: 'sshGithub', url: 'git@github.com:StevenWoW-K5/Jenkins-Zero-To-Hero-forked.git']])
-                  sh 'ls -ltr'
+                  sh 'pwd'
+                  sh 'ls -ltr -a'
                 }
               }
               stage('Build and Test') {
                 steps {
-                  sh 'ls -ltr'
+                sh 'pwd'
+                  sh 'ls -ltr -a'
                   // build the project and create a JAR file
                   sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
                 }
@@ -40,6 +44,8 @@ pipeline {
                 }
                 steps {
                   withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+                   sh 'pwd'
+                   sh 'ls -ltr -a'
                     sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
                   // Retrieve SonarQube analysis status
                       script {
@@ -64,7 +70,8 @@ pipeline {
                 }
                 steps {
                   script {
-                  sh 'ls -ltr'
+                  sh 'pwd'
+                  sh 'ls -ltr -a'
                       sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
                       def dockerImage = docker.image("${DOCKER_IMAGE}")
                       docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
@@ -85,8 +92,11 @@ pipeline {
                       script {
                           def oldPath = "image: rockuk/ultimate-cicd:[\\w.-]+"
                           def newPath = "image: rockuk/ultimate-cicd:${BUILD_NUMBER}"
+                          sh 'pwd'
+                          sh 'ls -ltr -a'
                           checkout changelog: false, poll: false, scm: scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[credentialsId: '8c0b4de7-ab96-4d0e-9eec-a561ee4a5b6e', url: 'git@github.com:StevenWoW-K5/Jenkins-Zero-To-Hero-forked-Deployment.git']])
-
+                          sh 'pwd'
+                          sh 'ls -ltr -a'
                           sh '''
                               git config user.email "stevenwu@163.com"
                               git config user.name "StevenWoW-K5"
@@ -102,6 +112,7 @@ pipeline {
                           //git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                           }
                       //}
+
                   }
               }
       }
