--- a/JenkinsFile
+++ b/JenkinsFile
@@ -37,7 +37,7 @@ pipeline {
                               cat spring-boot-app-manifests/deployment.yml
                               echo "hello"
 
-                              sed -i -E "s/image: rockuk\\/ultimate-cicd:([0-9.]+)/image: rockuk\\/ultimate-cicd:${BUILD_NUMBER}/g" "spring-boot-app-manifests/deployment.yml"
+                              sed -i -E "s/image: rockuk\\/ultimate-cicd:([a-zA-Z0-9.]+)/image: rockuk\\/ultimate-cicd:${BUILD_NUMBER}/g" "spring-boot-app-manifests/deployment.yml"
                               cat spring-boot-app-manifests/deployment.yml
                               git add spring-boot-app-manifests/deployment.yml
                               git commit -m "Update deployment image to version ${BUILD_NUMBER}"
