--- a/JenkinsFile
+++ b/JenkinsFile
@@ -42,8 +42,9 @@ pipeline {
                               git add spring-boot-app-manifests/deployment.yml
                               git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                               //git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-
+                              echo "hello222"
                               git remote -v
+                              echo "hello111"
 
                               git push origin HEAD:main
 
