--- a/JenkinsFile
+++ b/JenkinsFile
@@ -46,11 +46,13 @@ pipeline {
                               git remote -v
                               echo "hello111"
 
-                              git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                              git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/Jenkins-Zero-To-Hero-forked-Deployment HEAD:main
+
 
                           '''
                           //git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                           //git push origin HEAD:main
+                          //git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                           //GitHub Personal Access Token (PAT) Required: Some remote Git services, like GitHub, may require you to use a personal access token (PAT) instead of an SSH key for authentication. Make sure you have generated a PAT and use it instead of an SSH key if required.
                           }
                       }
